# Breakout-Clone

./: .gitignore  Breakout-Clone.code-workspace  Breakout.vcxproj.filters  CMakeLists.txt  CMakePresets.json  GenerateProjectFiles.bat  README.md  makefile  premake5.lua
shaders/: DefPS.cso  DefPS.hlsl  DefVS.cso  DefVS.hlsl
src/: Ball.cpp  Brick.cpp  Game.cpp  GameMode.cpp  Paddle.cpp  main.cpp
src/Engine/: Entity.h  Mesh.h  Vector2.h  Window.cpp  Window.h
src/Engine/Components/: Transform.h
src/Headers/: Ball.h  Brick.h  Collision.h  Config.h  Entity.h  Game.h  GameMode.h  Log.h  Paddle.h
src/Renderer/: BindsBase.h  Blobs.h  ConstantBuffer.cpp  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderType.h  Texture.cpp  Texture.h  Vertex3.h  VertexBuffer.cpp  VertexBuffer.h
src/game/: Game.h  game.cpp  game.hpp
